# LLMVoiceChat

./: .gitignore  ASR_USAGE_GUIDE.md  README.md  USAGE_GUIDE.md  agentChat.py  main.py  pyproject.toml  requirements.txt  voiceChatManage.py
docs/: API.md  DEPLOYMENT.md
voice-web-backend/backend/: .env.example  main_new.py
voice-web-backend/backend/api/: routes_new.py
voice-web-backend/backend/core/: agentChat.py  asr.py  asr_fixed.py  asr_fixed_v2.py  db_manager.py  dialogue_manager_new.py  playMp3.py  voiceCopy.py  voiceOut.py  voiceSpeak.py
voice-web-backend/backend/utils/: voiceCopy.py  voiceOutStream.py
voice-web-frontend/: .env  .env.production  README.md  index.html  package-lock.json  package.json  vite.config.js
voice-web-frontend/src/: App.vue  styles.css
voice-web-frontend/src/assets/: main.css
voice-web-frontend/src/components/: AudioWaveform.vue  ChatMessage.vue  ExportChat.vue  RealtimeVoiceControl.vue  SystemAudioVisualizer.vue  ThemeSwitcher.vue  VoiceControl.vue
voice-web-frontend/src/services/: api_asr.js  api_updated.js
voiceScripts/: .env  agentChat.py  voice.py  voiceCopy.py  voiceOut.py  voiceTest.py  voiceTools.py
